update language files

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -32,7 +32,6 @@ COM_XIVEIRM_IRMMASTERDATAS_CREATED="Created"
 COM_XIVEIRM_IRMMASTERDATAS_CREATED_BY="Created by"
 COM_XIVEIRM_IRMMASTERDATAS_CHECKED_OUT="0"
 COM_XIVEIRM_IRMMASTERDATAS_CHECKED_OUT_TIME="0"
-COM_XIVEIRM_IRMMASTERDATAS_CHECKED_OUT_BY="0"
 COM_XIVEIRM_IRMMASTERDATAS_MODIFIED="0"
 COM_XIVEIRM_IRMMASTERDATAS_TRASH="Trash"
 COM_XIVEIRM_IRMMASTERDATAS_CLIENT_ID="Client ID"
@@ -76,6 +75,12 @@ COM_XIVEIRM_AUDITS_CREATED_BY_FILTER="- Select created_by -"
 COM_XIVEIRM_AUDITS_ITEM_ID="Item ID"
 COM_XIVEIRM_AUDITS_REFERENCE_KEY="Reference Key"
 COM_XIVEIRM_AUDITS_REFERENCE_VALUE="Reference Value"
+COM_XIVEIRM_TITLE_LIST_VIEW_ADDITIONALOPERATIONS="Additional operations"
+COM_XIVEIRM_TITLE_LIST_VIEW_ADDITIONALOPERATIONS_DESC="Show a list of Additional operations"
+COM_XIVEIRM_TITLE_ITEM_VIEW_ADDITIONALOPERATION="Single Additionaloperation"
+COM_XIVEIRM_TITLE_ITEM_VIEW_ADDITIONALOPERATION_DESC="Show a specific Additionaloperation"
+COM_XIVEIRM_TITLE_FORM_VIEW_ADDITIONALOPERATION="AdditionaloperationForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_ADDITIONALOPERATION_DESC="Show a form to add or edit a Additionaloperation"
 COM_XIVEIRM_TITLE_IRMMASTERDATA="IRM Masterdata"
 COM_XIVEIRM_LEGEND_IRMMASTERDATA="IRM Masterdata"
 COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ID="ID"
@@ -90,8 +95,6 @@ COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CHECKED_OUT="N/A"
 COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CHECKED_OUT=""
 COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CHECKED_OUT_TIME="N/A"
 COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CHECKED_OUT_TIME=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CHECKED_OUT_BY="Checked Out By"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CHECKED_OUT_BY=""
 COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_MODIFIED="Modified"
 COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_MODIFIED=""
 COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_TRASH="0"
@@ -169,6 +172,20 @@ COM_XIVEIRM_FORM_LBL_SELECTLIST_SL_VALUE="Selectlist value"
 COM_XIVEIRM_FORM_DESC_SELECTLIST_SL_VALUE=""
 COM_XIVEIRM_FORM_LBL_SELECTLIST_SL_STRING="Selectlist string"
 COM_XIVEIRM_FORM_DESC_SELECTLIST_SL_STRING="should be translatable by loadLanguage"
+COM_XIVEIRM_TITLE_AUDIT="Audit"
+COM_XIVEIRM_LEGEND_AUDIT="Audit"
+COM_XIVEIRM_FORM_LBL_AUDIT_ID="ID"
+COM_XIVEIRM_FORM_DESC_AUDIT_ID=""
+COM_XIVEIRM_FORM_LBL_AUDIT_CREATED="Created"
+COM_XIVEIRM_FORM_DESC_AUDIT_CREATED=""
+COM_XIVEIRM_FORM_LBL_AUDIT_CREATED_BY="Created by"
+COM_XIVEIRM_FORM_DESC_AUDIT_CREATED_BY=""
+COM_XIVEIRM_FORM_LBL_AUDIT_ITEM_ID="Item ID"
+COM_XIVEIRM_FORM_DESC_AUDIT_ITEM_ID=""
+COM_XIVEIRM_FORM_LBL_AUDIT_REFERENCE_KEY="Reference Key"
+COM_XIVEIRM_FORM_DESC_AUDIT_REFERENCE_KEY="app oder pluginname"
+COM_XIVEIRM_FORM_LBL_AUDIT_REFERENCE_VALUE="Reference Value"
+COM_XIVEIRM_FORM_DESC_AUDIT_REFERENCE_VALUE=""
 
 
 
