--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -21,3 +21,15 @@ COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
 COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
 
 COM_XIVEIRM_TITLE_AUDITS="Audits"
+
+COM_XIVEIRM_TITLE_LIST_VIEW_ADDITIONALOPERATIONS="Additional operations"
+
+COM_XIVEIRM_TITLE_LIST_VIEW_ADDITIONALOPERATIONS_DESC="Show a list of Additional operations"
+
+COM_XIVEIRM_TITLE_ITEM_VIEW_ADDITIONALOPERATION="Single Additionaloperation"
+
+COM_XIVEIRM_TITLE_ITEM_VIEW_ADDITIONALOPERATION_DESC="Show a specific Additionaloperation"
+
+COM_XIVEIRM_TITLE_FORM_VIEW_ADDITIONALOPERATION="AdditionaloperationForm"
+
+COM_XIVEIRM_TITLE_FORM_VIEW_ADDITIONALOPERATION_DESC="Show a form to add or edit a Additionaloperation"
