--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -59,8 +59,9 @@ COM_XIVEIRM_ADDITIONALINFORMATIONS_ID="ID"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_CREATED="0"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_STATE="State"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_ITEM_ID="Item ID"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_PLUGIN_KEY="Plugin Key"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_PLUGIN_VALUE="Plugin Value"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_NAME="Tab"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_FORM_FIELD="Form Field"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_FORM_VALUE="Form Value"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_ORDERING="Order"
 COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
 COM_XIVEIRM_SELECTLISTS_SL_KEY="Selectlist Key"
@@ -155,13 +156,20 @@ COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_STATE="State"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_STATE=""
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ITEM_ID="Item ID"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_ITEM_ID="This is the id from the #__xiveirm_masterdata table"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_PLUGIN_KEY="Plugin Key"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_PLUGIN_KEY="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_NAME="Tab"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_NAME="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
 For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas.
 
 This field identifies your plugin. eg: \"invoicevalues\""
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_PLUGIN_VALUE="Plugin Value"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_PLUGIN_VALUE="This field holds the value this can be a single word or a json string"
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_FORM_FIELD="Form Field"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_FORM_FIELD="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
+For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas.
+
+This field identifies the form field. eg: \"invoice_address\"
+
+Form fields are unique in your plugin NOT in database"
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_FORM_VALUE="Form Value"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_FORM_VALUE="This field holds the value this can be a single word, a json string or any other content for a DB text field. Please note that any content will be db->quoted"
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ORDERING="Order"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_ORDERING=""
 COM_XIVEIRM_TITLE_SELECTLIST="Select list"
