remove profile folder, reinit plugin structure

--- a/source/package/plugins/plg_irmmasterdatatabs_medicaldetails/language/en-GB/en-GB.plg_irmmasterdatatabs_medicaldetails.ini
+++ b/source/package/plugins/plg_irmmasterdatatabs_medicaldetails/language/en-GB/en-GB.plg_irmmasterdatatabs_medicaldetails.ini
@@ -12,3 +12,9 @@ PLG_IRMMASTERDATATABS_MEDICALDETAILS_FIELD_JOBTITLE_DESC="Choose an option for t
 PLG_IRMMASTERDATATABS_MEDICALDETAILS_FILL_FIELD_DESC_SITE="If required, please fill this field."
 
 PLG_IRMMASTERDATATABS_MEDICALDETAILS_SLIDER_LABEL="User Profile Information"
+
+
+
+
+
+PLG_IRMMASTERDATATABS_MEDICALDETAILS_TABNAME = "Medical Details"
