changed additionalinformations structure

--- a/source/package/components/com_xiveirm/administrator/language/de-DE.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/de-DE.com_xiveirm.ini
@@ -55,14 +55,11 @@ COM_XIVEIRM_IRMMASTERDATAS_EMAIL="0"
 COM_XIVEIRM_IRMMASTERDATAS_WEB="0"
 COM_XIVEIRM_IRMMASTERDATAS_REMARKS="0"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_ID="ID"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_CREATED="0"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_ID="Tab Id"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_FIELD_ID="0"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_VALUE="Tab Value"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_STATE="State"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_ITEM_ID="Item ID"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_NAME="Tab"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_FORM_FIELD="Form Field"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_FORM_VALUE="Form Value"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_ORDERING="Order"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_ORDERING="0"
 COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
 COM_XIVEIRM_SELECTLISTS_SL_KEY="Selectlist Key"
 COM_XIVEIRM_SELECTLISTS_SL_VALUE="Selectlist value"
@@ -148,29 +145,27 @@ COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA="IrmmasterdataForm"
 COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA_DESC="Show a form to add or edit a Irmmasterdata"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_LEGEND_ADDITIONALINFORMATION="Additional Information"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ID="ID"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_ID=""
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_CREATED="Created"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_CREATED=""
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_STATE="State"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_STATE=""
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ITEM_ID="Item ID"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_ITEM_ID="This is the id from the #__xiveirm_masterdata table"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_NAME="Tab"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_NAME="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
-For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas.
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_ID="Tab Id"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
+For Example: We want to store datas need for invoicing - i.e. an additional invoice address or other invoice related datas.
 
-This field identifies your plugin. eg: \"invoicevalues\""
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_FORM_FIELD="Form Field"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_FORM_FIELD="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
+This tab_id is a combination between your plugin idname  (eg: \"invoicevalues\") and the customer db id (This is the id from the #__xiveirm_masterdata table). We identify if only one tab is related to the customer at the same time!
+
+The complete string looks like \"invoicevalues.4234142\""
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_FIELD_ID="Tab Field Id"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_FIELD_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
 For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas.
 
 This field identifies the form field. eg: \"invoice_address\"
 
-Form fields are unique in your plugin NOT in database"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_FORM_VALUE="Form Value"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_FORM_VALUE="This field holds the value this can be a single word, a json string or any other content for a DB text field. Please note that any content will be db->quoted"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ORDERING="Order"
+Form fields are unique in your plugin NOT in database
+
+This field is currently not used by the API !!!!"
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_VALUE="Tab Value"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_VALUE="This field holds the value this can be a single word, a json string or any other content for a DB text field. Please note that any content will be db->quoted"
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_STATE="State"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_STATE=""
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ORDERING="0"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_ORDERING=""
 COM_XIVEIRM_TITLE_SELECTLIST="Select list"
 COM_XIVEIRM_LEGEND_SELECTLIST="Select list"
