updated lang files

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -1,3 +1,9 @@
+; @package		XAP Project - Xive-Application-Platform
+; @copyright		Copyright (C) 1997 - 2013 devXive - research and development (http://www.devxive.com)
+; @license		http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
+; @note		All ini files need to be saved as UTF-8 - No BOM
+
 COM_XIVEIRM="XiveIRM"
 COM_XIVEIRM_COMPONENT_LABEL="Xiveirm"
 COM_XIVEIRM_CONFIGURATION="Xiveirm Configuration"
@@ -24,7 +30,6 @@ COM_XIVEIRM_ITEM_ID_SELECT_LABEL_FORM="Select the Item ID to Edit (Set up as 0 i
 COM_XIVEIRM_FIELDSET_ITEM_ID_SELECT_LABEL="Required Settings"
 COM_XIVEIRM_FILTER_SELECT_LABEL=" - Select %s - "
 COM_XIVEIRM_TEST_LABEL="Test label"
-
 COM_XIVEIRM_TITLE_IRMMASTERDATAS="IRM Masterdatas"
 COM_XIVEIRM_IRMMASTERDATAS_ID="ID"
 COM_XIVEIRM_IRMMASTERDATAS_STATE="State"
@@ -146,21 +151,9 @@ COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA_DESC="Show a form to add or edit a Irm
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_LEGEND_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_ID="Tab Id"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
-For Example: We want to store datas need for invoicing - i.e. an additional invoice address or other invoice related datas.
-
-This tab_id is a combination between your plugin idname  (eg: \"invoicevalues\") and the customer db id (This is the id from the #__xiveirm_masterdata table). We identify if only one tab is related to the customer at the same time!
-
-The complete string looks like \"invoicevalues.4234142\""
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM! For Example: We want to store datas need for invoicing - i.e. an additional invoice address or other invoice related datas. This tab_id is a combination between your plugin idname  (eg: \"invoicevalues\") and the customer db id (This is the id from the #__xiveirm_masterdata table). We identify if only one tab is related to the customer at the same time! The complete string looks like \"invoicevalues.4234142\""
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_FIELD_ID="Tab Field Id"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_FIELD_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM!
-For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas.
-
-This field identifies the form field. eg: \"invoice_address\"
-
-Form fields are unique in your plugin NOT in database
-
-This field is currently not used by the API !!!!"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_FIELD_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM! For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas. This field identifies the form field. eg: \"invoice_address\" Form fields are unique in your plugin NOT in database This field is currently not used by the API !!!!"
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_VALUE="Tab Value"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_VALUE="This field holds the value this can be a single word, a json string or any other content for a DB text field. Please note that any content will be db->quoted"
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_STATE="State"
@@ -189,6 +182,3 @@ COM_XIVEIRM_FORM_LBL_AUDIT_REFERENCE_KEY="Reference Key"
 COM_XIVEIRM_FORM_DESC_AUDIT_REFERENCE_KEY="app oder pluginname"
 COM_XIVEIRM_FORM_LBL_AUDIT_REFERENCE_VALUE="Reference Value"
 COM_XIVEIRM_FORM_DESC_AUDIT_REFERENCE_VALUE=""
-
-
-
