--- a/source/package/plugins/plg_user_xiveirmclientprofile/language/en-GB/en-GB.plg_user_xiveirmclientprofile.sys.ini
+++ b/source/package/plugins/plg_user_xiveirmclientprofile/language/en-GB/en-GB.plg_user_xiveirmclientprofile.sys.ini
@@ -1,2 +1,8 @@
+; @package		XAP Project - Xive-Application-Platform
+; @copyright		Copyright (C) 1997 - 2013 devXive - research and development (http://www.devxive.com)
+; @license		http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
+; @note		All ini files need to be saved as UTF-8 - No BOM
+
 PLG_USER_XIVEIRMCLIENTPROFILE = "User - XiveIRM Client Profile"
 PLG_USER_XIVEIRMCLIENTPROFILE_XML_DESCRIPTION = "User Profile Plug-in with special fields for Xive IRM. Please note that this plugin is only needed if your system is setted up as a service for others. The Client ID is an ID for grouping all users to a company or a to single user to determine all datas in the database."
