--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -1,35 +1,25 @@
+; @package		XAP Project - Xive-Application-Platform
+; @copyright		Copyright (C) 1997 - 2013 devXive - research and development (http://www.devxive.com)
+; @license		http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
+; @note		All ini files need to be saved as UTF-8 - No BOM
+
 COM_XIVEIRM="XiveIRM"
 COM_XIVEIRM_XML_DESCRIPTION="Interoperable Relationship Management - the next Generation of CRM"
 COM_XIVEIRM_TEST_LABEL="Test label"
-
 COM_XIVEIRM_TITLE_IRMMASTERDATAS="IRM Masterdatas"
-
 COM_XIVEIRM_TITLE_LIST_VIEW_IRMMASTERDATAS="IRM Masterdatas"
-
 COM_XIVEIRM_TITLE_LIST_VIEW_IRMMASTERDATAS_DESC="Show a list of IRM Masterdatas"
-
 COM_XIVEIRM_TITLE_ITEM_VIEW_IRMMASTERDATA="Single Irmmasterdata"
-
 COM_XIVEIRM_TITLE_ITEM_VIEW_IRMMASTERDATA_DESC="Show a specific Irmmasterdata"
-
 COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA="IrmmasterdataForm"
-
 COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA_DESC="Show a form to add or edit a Irmmasterdata"
-
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
-
 COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
-
 COM_XIVEIRM_TITLE_AUDITS="Audits"
-
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS="Apis"
-
 COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC="Show a list of Apis"
-
 COM_XIVEIRM_TITLE_ITEM_VIEW_API="Single Api"
-
 COM_XIVEIRM_TITLE_ITEM_VIEW_API_DESC="Show a specific Api"
-
 COM_XIVEIRM_TITLE_FORM_VIEW_API="ApiForm"
-
 COM_XIVEIRM_TITLE_FORM_VIEW_API_DESC="Show a form to add or edit a Api"
