--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -1,3 +1,9 @@
+; @package		XAP Project - Xive-Application-Platform
+; @copyright		Copyright (C) 1997 - 2013 devXive - research and development (http://www.devxive.com)
+; @license		http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
+; @note		All ini files need to be saved as UTF-8 - No BOM
+
 COM_XIVEIRM = "XiveIRM"
 COM_XIVEIRM_ITEM_SAVED_SUCCESSFULLY = "Item saved successfully"
 COM_XIVEIRM_ITEM_DELETED_SUCCESSFULLY = "Item deleted successfully"
