--- a/source/package/plugins/plg_irmmasterdatatabs_medicaldetails/language/en-GB/en-GB.plg_irmmasterdatatabs_medicaldetails.sys.ini
+++ b/source/package/plugins/plg_irmmasterdatatabs_medicaldetails/language/en-GB/en-GB.plg_irmmasterdatatabs_medicaldetails.sys.ini
@@ -1,2 +1,8 @@
+; @package		XAP Project - Xive-Application-Platform
+; @copyright		Copyright (C) 1997 - 2013 devXive - research and development (http://www.devxive.com)
+; @license		http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
+; @note		All ini files need to be saved as UTF-8 - No BOM
+
 PLG_IRMMASTERDATATABS_MEDICALDETAILS = "IRMMasterDataTab - Medical details"
 PLG_IRMMASTERDATATABS_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Masterdata App which extends the master data with medically relevant fields"
