--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -4,7 +4,7 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-COM_XIVEIRM = "XiveIRM"
+COM_XIVEIRM="XiveIRM"
 COM_XIVEIRM_ITEM_SAVED_SUCCESSFULLY = "Item saved successfully"
 COM_XIVEIRM_ITEM_DELETED_SUCCESSFULLY = "Item deleted successfully"
 COM_XIVEIRM_ITEM_NOT_LOADED = "Could not load the item"
@@ -13,69 +13,71 @@ COM_XIVEIRM_ADD_ITEM = "Add new"
 COM_XIVEIRM_EDIT_ITEM = "Edit"
 COM_XIVEIRM_DELETE_ITEM = "Delete"
 COM_XIVEIRM_PUBLISH_ITEM = "Publish"
-COM_XIVEIRM_UNPUBLISH_ITEM = "Unpubilsh"
+COM_XIVEIRM_UNPUBLISH_ITEM = "Unpublish"
 COM_XIVEIRM_NO_ITEMS = "There are no items in the list"
-COM_CIVEIRM_SELECT = "- Please Select -"
-
-
+COM_XIVEIRM_TITLE_FORM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show a form to add or edit a item"
+COM_XIVEIRM_TITLE_ITEM_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "Show an item"
+COM_XIVEIRM_TITLE_LIST_VIEW_XXX_UPPER_INTERNAL_NAME_XXX_DESC = "List all the items"
+COM_XIVEIRM_SELECT = "- Please Select -"
 
 
 ; IRMMasterdataGlobalForm ----------------------------------------
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADD_NEW_CONTACT = "Add a new contact"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_TAB_BASICDATA = "Stammdaten"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TAB_MORE = "More"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_SUBMIT_CHECKIN = "Submit"
-COM_XIVEIRM_IRMMASTERDATA_FORM_SUBMIT_CHECKIN_TIP = "Submit & Check-In"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CANCEL_CHECKIN = "Cancel"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CANCEL_CHECKIN_TIP = "Cancel & Check-In (if no other user has opened)"
-COM_XIVEIRM_IRMMASTERDATA_FORM_RESET = "Reset"
-COM_XIVEIRM_IRMMASTERDATA_FORM_RESET_TIP = "Reset form to the default values"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADD_NEW_CONTACT = "Add a new contact"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_BASICDATA = "Stammdaten"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_MORE = "More"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_SUBMIT_CHECKIN = "Submit"
+COM_XIVEIRM_IRMCUSTOMER_FORM_SUBMIT_CHECKIN_TIP = "Submit & Check-In"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL_CHECKIN = "Cancel"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL_CHECKIN_TIP = "Cancel & Check-In (if no other user has opened)"
+COM_XIVEIRM_IRMCUSTOMER_FORM_RESET = "Reset"
+COM_XIVEIRM_IRMCUSTOMER_FORM_RESET_TIP = "Reset form to the default values"
 
 ; baseForm ----------------------------------------
-COM_XIVEIRM_IRMMASTERDATA_FORM_LAST_MODIFIED = "Last modified on:"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CHECKED_OUT_ALERT_INFO = "<h1><i class=\"icon-signout\"></i> Sie haben diesen Kontakt ausgecheckt!</h1><p>Andere Benutzer sehen, dass Sie diesen Kontakt gerade bearbeiten und erhalten einen entsprechenden Hinweis.</p><p>Bitte beachten Sie auch die folgenden Hinweise:</p><ul><li>Das \"CICA-System\" <i>(Check-In, Check-Out)</i> weist Sie auf eine laufende bearbeitung hin.</li><li>Eine gleichzeitige Bearbeitung ist m&ouml;glich, kann jedoch zu inkonsistenten Datens&auml;tzen f&uuml;hren</li><li>Verlassen Sie diese Kontakt bitte \"IMMER\" &uuml;ber die entsprechenden Schaltfl&auml;chen! (Speichern, Abbrechen, etc...)</li><li>Eine automatische Freigabe des Datensatzes erfolgt automatisch, wenn innerhalb von 10 Minuten keine Eingabe erfolgt!</li></ul>"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CUSTOMER_ID_LABEL = "Customer ID"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CUSTOMER_ID = "Enter the Customer ID"
-COM_XIVEIRM_IRMMASTERDATA_FORM_NAME_LABEL = "Name"
-COM_XIVEIRM_IRMMASTERDATA_FORM_NAME_TITLE = "Academic title"
-COM_XIVEIRM_IRMMASTERDATA_FORM_LAST_NAME = "Last Name"
-COM_XIVEIRM_IRMMASTERDATA_FORM_FIRST_NAME = "First Name"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_LABEL = "Traits"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_UNKNOWN = "Unknown"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_FEMALE = "Female"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_MALE = "Male"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_COMPANY = "Company"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_DESC = "Gender takes affect in all other apps"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_DOB = "Date of Birth"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_DOB_DESC = "Autodetects format from browser"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_LABEL = "Address"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_NAME = "Name (eg. name of an intitution, hospital, etc...)"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_NAME_ADD = "Additional infos, such as: Apartment 22"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_STREET = "Name of the street"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_HOUSENO = "House No"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_ZIP = "ZIP-Code"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_CITY = "Name of the city"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_COUNTRY = "Name of the country"
-COM_XIVEIRM_IRMMASTERDATA_FORM_PHONE_NUMBERS_LABEL = "Phone numbers"
-COM_XIVEIRM_IRMMASTERDATA_FORM_PHONE = "Phone"
-COM_XIVEIRM_IRMMASTERDATA_FORM_FAX = "Fax"
-COM_XIVEIRM_IRMMASTERDATA_FORM_MOBILE = "Mobile"
-COM_XIVEIRM_IRMMASTERDATA_FORM_WEB_LABEL = "Web"
-COM_XIVEIRM_IRMMASTERDATA_FORM_EMAIL = "eMail-Address"
-COM_XIVEIRM_IRMMASTERDATA_FORM_WEB = "Link to a social profile or a website"
-COM_XIVEIRM_IRMMASTERDATA_FORM_INTERNAL_REMARKS = "Internal remarks"
-COM_XIVEIRM_IRMMASTERDATA_FORM_INTERNAL_REMARKS_DESC = "Type in your text here"
+COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_MODIFIED = "Last modified on:"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_INFO = "<h1><i class=\"icon-signout\"></i> Sie haben diesen Kontakt ausgecheckt!</h1><p>Andere Benutzer sehen, dass Sie diesen Kontakt gerade bearbeiten und erhalten einen entsprechenden Hinweis.</p><p>Bitte beachten Sie auch die folgenden Hinweise:</p><ul><li>Das \"CICA-System\" <i>(Check-In, Check-Out)</i> weist Sie auf eine laufende bearbeitung hin.</li><li>Eine gleichzeitige Bearbeitung ist m&ouml;glich, kann jedoch zu inkonsistenten Datens&auml;tzen f&uuml;hren</li><li>Verlassen Sie diese Kontakt bitte \"IMMER\" &uuml;ber die entsprechenden Schaltfl&auml;chen! (Speichern, Abbrechen, etc...)</li><li>Eine automatische Freigabe des Datensatzes erfolgt automatisch, wenn innerhalb von 10 Minuten keine Eingabe erfolgt!</li></ul>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID_LABEL = "Customer ID"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID = "Enter the Customer ID"
+COM_XIVEIRM_IRMCUSTOMER_FORM_NAME_LABEL = "Name"
+COM_XIVEIRM_IRMCUSTOMER_FORM_NAME_TITLE = "Academic title"
+COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_NAME = "Last Name"
+COM_XIVEIRM_IRMCUSTOMER_FORM_FIRST_NAME = "First Name"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_LABEL = "Traits"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_UNKNOWN = "Unknown"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_FEMALE = "Female"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_MALE = "Male"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_COMPANY = "Company"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_DESC = "Gender takes affect in all other apps"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_DOB = "Date of Birth"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_DOB_DESC = "Autodetects format from browser"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_LABEL = "Address"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_NAME = "Name (eg. name of an intitution, hospital, etc...)"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_NAME_ADD = "Additional infos, such as: Apartment 22"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_STREET = "Name of the street"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_HOUSENO = "House No"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_ZIP = "ZIP-Code"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_CITY = "Name of the city"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_COUNTRY = "Name of the country"
+COM_XIVEIRM_IRMCUSTOMER_FORM_PHONE_NUMBERS_LABEL = "Phone numbers"
+COM_XIVEIRM_IRMCUSTOMER_FORM_PHONE = "Phone"
+COM_XIVEIRM_IRMCUSTOMER_FORM_FAX = "Fax"
+COM_XIVEIRM_IRMCUSTOMER_FORM_MOBILE = "Mobile"
+COM_XIVEIRM_IRMCUSTOMER_FORM_WEB_LABEL = "Web"
+COM_XIVEIRM_IRMCUSTOMER_FORM_EMAIL = "eMail-Address"
+COM_XIVEIRM_IRMCUSTOMER_FORM_WEB = "Link to a social profile or a website"
+COM_XIVEIRM_IRMCUSTOMER_FORM_INTERNAL_REMARKS = "Internal remarks"
+COM_XIVEIRM_IRMCUSTOMER_FORM_INTERNAL_REMARKS_DESC = "Type in your text here"
+
