--- a/source/package/components/com_xiveirm/site/language/de-DE.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/de-DE.com_xiveirm.ini
@@ -1,75 +1,81 @@
+; @package		XAP Project - Xive-Application-Platform
+; @copyright		Copyright (C) 1997 - 2013 devXive - research and development (http://www.devxive.com)
+; @license		http://www.gnu.org/licenses/gpl-2.0.html GNU/GPLv2 only
+; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
+; @note		All ini files need to be saved as UTF-8 - No BOM
+
 COM_XIVEIRM = "XiveIRM"
-COM_XIVEIRM_ITEM_SAVED_SUCCESSFULLY = "Item saved successfully"
-COM_XIVEIRM_ITEM_DELETED_SUCCESSFULLY = "Item deleted successfully"
-COM_XIVEIRM_ITEM_NOT_LOADED = "Could not load the item"
-COM_XIVEIRM_VIEW_FILE = "[View File]"
-COM_XIVEIRM_ADD_ITEM = "Add new"
-COM_XIVEIRM_EDIT_ITEM = "Edit"
-COM_XIVEIRM_DELETE_ITEM = "Delete"
-COM_XIVEIRM_PUBLISH_ITEM = "Publish"
-COM_XIVEIRM_UNPUBLISH_ITEM = "Unpubilsh"
-COM_XIVEIRM_NO_ITEMS = "There are no items in the list"
-COM_CIVEIRM_SELECT = "- Please Select -"
+COM_XIVEIRM_ITEM_SAVED_SUCCESSFULLY = "Element erfolgreich gespeichert"
+COM_XIVEIRM_ITEM_DELETED_SUCCESSFULLY = "Element erfolgreich gelöscht"
+COM_XIVEIRM_ITEM_NOT_LOADED = "Das Element konnte nicht geladen werden."
+COM_XIVEIRM_VIEW_FILE = "[Datei anzeigen]"
+COM_XIVEIRM_ADD_ITEM = "Neuen Eintrag hinzufügen"
+COM_XIVEIRM_EDIT_ITEM = "Bearbeiten"
+COM_XIVEIRM_DELETE_ITEM = "Löschen"
+COM_XIVEIRM_PUBLISH_ITEM = "Veröffentlichen"
+COM_XIVEIRM_UNPUBLISH_ITEM = "Verstecken"
+COM_XIVEIRM_NO_ITEMS = "Es gibt keine Elemente in der Liste"
+COM_XIVEIRM_SELECT = "- Bitte auswählen -"
 
 
 
 
 ; IRMMasterdataGlobalForm ----------------------------------------
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADD_NEW_CONTACT = "Add a new contact"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_TAB_BASICDATA = "Stammdaten"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TAB_MORE = "More"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_ = ""
-COM_XIVEIRM_IRMMASTERDATA_FORM_SUBMIT_CHECKIN = "Submit"
-COM_XIVEIRM_IRMMASTERDATA_FORM_SUBMIT_CHECKIN_TIP = "Submit & Check-In"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CANCEL_CHECKIN = "Cancel"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CANCEL_CHECKIN_TIP = "Cancel & Check-In (if no other user has opened)"
-COM_XIVEIRM_IRMMASTERDATA_FORM_RESET = "Reset"
-COM_XIVEIRM_IRMMASTERDATA_FORM_RESET_TIP = "Reset form to the default values"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADD_NEW_CONTACT = "Hinzufügen eines neuen Kontakts"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_BASICDATA = "Stammdaten"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TAB_MORE = "Mehr"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_ = ""
+COM_XIVEIRM_IRMCUSTOMER_FORM_SUBMIT_CHECKIN = "Senden"
+COM_XIVEIRM_IRMCUSTOMER_FORM_SUBMIT_CHECKIN_TIP = "Senden & Einchecken"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL_CHECKIN = "Abbrechen"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CANCEL_CHECKIN_TIP = "Abbrechen & Einchecken (wenn kein anderer Benutzer dieses Element geöffnet hat)"
+COM_XIVEIRM_IRMCUSTOMER_FORM_RESET = "Zurücksetzen"
+COM_XIVEIRM_IRMCUSTOMER_FORM_RESET_TIP = "Formular auf die Standardwerte zurücksetzen"
 
 ; baseForm ----------------------------------------
-COM_XIVEIRM_IRMMASTERDATA_FORM_LAST_MODIFIED = "Last modified on:"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CHECKED_OUT_ALERT_INFO = "<h1><i class=\"icon-signout\"></i> Sie haben diesen Kontakt ausgecheckt!</h1><p>Andere Benutzer sehen, dass Sie diesen Kontakt gerade bearbeiten und erhalten einen entsprechenden Hinweis.</p><p>Bitte beachten Sie auch die folgenden Hinweise:</p><ul><li>Das \"CICA-System\" <i>(Check-In, Check-Out)</i> weist Sie auf eine laufende bearbeitung hin.</li><li>Eine gleichzeitige Bearbeitung ist m&ouml;glich, kann jedoch zu inkonsistenten Datens&auml;tzen f&uuml;hren</li><li>Verlassen Sie diese Kontakt bitte \"IMMER\" &uuml;ber die entsprechenden Schaltfl&auml;chen! (Speichern, Abbrechen, etc...)</li><li>Eine automatische Freigabe des Datensatzes erfolgt automatisch, wenn innerhalb von 10 Minuten keine Eingabe erfolgt!</li></ul>"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CUSTOMER_ID_LABEL = "Customer ID"
-COM_XIVEIRM_IRMMASTERDATA_FORM_CUSTOMER_ID = "Enter the Customer ID"
-COM_XIVEIRM_IRMMASTERDATA_FORM_NAME_LABEL = "Name"
-COM_XIVEIRM_IRMMASTERDATA_FORM_NAME_TITLE = "Academic title"
-COM_XIVEIRM_IRMMASTERDATA_FORM_LAST_NAME = "Last Name"
-COM_XIVEIRM_IRMMASTERDATA_FORM_FIRST_NAME = "First Name"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_LABEL = "Traits"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_UNKNOWN = "Unknown"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_FEMALE = "Female"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_MALE = "Male"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_COMPANY = "Company"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_GENDER_DESC = "Gender takes affect in all other apps"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_DOB = "Date of Birth"
-COM_XIVEIRM_IRMMASTERDATA_FORM_TRAIT_DOB_DESC = "Autodetects format from browser"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_LABEL = "Address"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_NAME = "Name (eg. name of an intitution, hospital, etc...)"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_NAME_ADD = "Additional infos, such as: Apartment 22"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_STREET = "Name of the street"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_HOUSENO = "House No"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_ZIP = "ZIP-Code"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_CITY = "Name of the city"
-COM_XIVEIRM_IRMMASTERDATA_FORM_ADDRESS_COUNTRY = "Name of the country"
-COM_XIVEIRM_IRMMASTERDATA_FORM_PHONE_NUMBERS_LABEL = "Phone numbers"
-COM_XIVEIRM_IRMMASTERDATA_FORM_PHONE = "Phone"
-COM_XIVEIRM_IRMMASTERDATA_FORM_FAX = "Fax"
-COM_XIVEIRM_IRMMASTERDATA_FORM_MOBILE = "Mobile"
-COM_XIVEIRM_IRMMASTERDATA_FORM_WEB_LABEL = "Web"
-COM_XIVEIRM_IRMMASTERDATA_FORM_EMAIL = "eMail-Address"
-COM_XIVEIRM_IRMMASTERDATA_FORM_WEB = "Link to a social profile or a website"
-COM_XIVEIRM_IRMMASTERDATA_FORM_INTERNAL_REMARKS = "Internal remarks"
-COM_XIVEIRM_IRMMASTERDATA_FORM_INTERNAL_REMARKS_DESC = "Type in your text here"
+COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_MODIFIED = "Zuletzt geändert am:"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_INFO = "<h1><i class=\"_QQ_"icon-signout\"_QQ_"></i> Sie haben diesen Kontakt ausgecheckt!</h1><p>Andere Benutzer sehen, dass Sie diesen Kontakt gerade bearbeiten und erhalten einen entsprechenden Hinweis.</p><p>Bitte beachten Sie auch die folgenden Hinweise:</p><ul><li>Das \"_QQ_"CICA-System\"_QQ_" <i>(Check-In, Check-Out)</i> weist Sie auf eine laufende bearbeitung hin.</li><li>Eine gleichzeitige Bearbeitung ist m&ouml;glich, kann jedoch zu inkonsistenten Datens&auml;tzen f&uuml;hren</li><li>Verlassen Sie diese Kontakt bitte \"_QQ_"IMMER\"_QQ_" &uuml;ber die entsprechenden Schaltfl&auml;chen! (Speichern, Abbrechen, etc...)</li><li>Eine automatische Freigabe des Datensatzes erfolgt automatisch, wenn innerhalb von 10 Minuten keine Eingabe erfolgt!</li></ul>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"_QQ_"icon-signout\"_QQ_"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"_QQ_"icon-lock red\"_QQ_"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="_QQ_"%s"_QQ_">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID_LABEL = "Kundennummer"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID = "Kundennummer eingeben"
+COM_XIVEIRM_IRMCUSTOMER_FORM_NAME_LABEL = "Name"
+COM_XIVEIRM_IRMCUSTOMER_FORM_NAME_TITLE = "Akademischer Titel"
+COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_NAME = "Vorname"
+COM_XIVEIRM_IRMCUSTOMER_FORM_FIRST_NAME = "Nachname"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_LABEL = "Merkmale"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_UNKNOWN = "Unbekannt"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_FEMALE = "Weiblich"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_MALE = "Männlich"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_COMPANY = "Firma"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_GENDER_DESC = "Das gewählte Geschlecht wirkt sich auf andere Anwendungen aus"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_DOB = "Geburtsdatum"
+COM_XIVEIRM_IRMCUSTOMER_FORM_TRAIT_DOB_DESC = "Automatische Formaterkennung über den Browser"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_LABEL = "Adresse"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_NAME = "Name (zB. Name einer Intitution, Krankenhaus usw....)"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_NAME_ADD = "Weitere Infos, wie z.B.: Wohnung 22"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_STREET = "Namen der Straße"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_HOUSENO = "Haus Nr."
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_ZIP = "Postleitzahl"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_CITY = "Name der Stadt"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ADDRESS_COUNTRY = "Name des Landes"
+COM_XIVEIRM_IRMCUSTOMER_FORM_PHONE_NUMBERS_LABEL = "Telefonnummern"
+COM_XIVEIRM_IRMCUSTOMER_FORM_PHONE = "Festnetz"
+COM_XIVEIRM_IRMCUSTOMER_FORM_FAX = "Fax"
+COM_XIVEIRM_IRMCUSTOMER_FORM_MOBILE = "Mobil"
+COM_XIVEIRM_IRMCUSTOMER_FORM_WEB_LABEL = "Web"
+COM_XIVEIRM_IRMCUSTOMER_FORM_EMAIL = "eMail-Addresse"
+COM_XIVEIRM_IRMCUSTOMER_FORM_WEB = "Ein soziales Profil oder eine Website verlinken"
+COM_XIVEIRM_IRMCUSTOMER_FORM_INTERNAL_REMARKS = "Interne Bemerkungen"
+COM_XIVEIRM_IRMCUSTOMER_FORM_INTERNAL_REMARKS_DESC = "Geben Sie Ihren Text hier ein"
