--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -30,34 +30,34 @@ COM_XIVEIRM_ITEM_ID_SELECT_LABEL_FORM="Select the Item ID to Edit (Set up as 0 i
 COM_XIVEIRM_FIELDSET_ITEM_ID_SELECT_LABEL="Required Settings"
 COM_XIVEIRM_FILTER_SELECT_LABEL=" - Select %s - "
 COM_XIVEIRM_TEST_LABEL="Test label"
-COM_XIVEIRM_TITLE_IRMMASTERDATAS="IRM Masterdatas"
-COM_XIVEIRM_IRMMASTERDATAS_ID="ID"
-COM_XIVEIRM_IRMMASTERDATAS_STATE="State"
-COM_XIVEIRM_IRMMASTERDATAS_CREATED="Created"
-COM_XIVEIRM_IRMMASTERDATAS_CREATED_BY="Created by"
-COM_XIVEIRM_IRMMASTERDATAS_CHECKED_OUT="0"
-COM_XIVEIRM_IRMMASTERDATAS_CHECKED_OUT_TIME="0"
-COM_XIVEIRM_IRMMASTERDATAS_MODIFIED="0"
-COM_XIVEIRM_IRMMASTERDATAS_CLIENT_ID="Client ID"
-COM_XIVEIRM_IRMMASTERDATAS_CUSTOMER_ID="Customer ID"
-COM_XIVEIRM_IRMMASTERDATAS_TITLE="0"
-COM_XIVEIRM_IRMMASTERDATAS_LAST_NAME="Last Name"
-COM_XIVEIRM_IRMMASTERDATAS_FIRST_NAME="First Name"
-COM_XIVEIRM_IRMMASTERDATAS_GENDER="Gender"
-COM_XIVEIRM_IRMMASTERDATAS_DOB="Date of Birth"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_NAME="0"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_NAME_ADD="0"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_STREET="0"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_HOUSENO="0"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_ZIP="0"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_CITY="0"
-COM_XIVEIRM_IRMMASTERDATAS_ADDRESS_COUNTRY="0"
-COM_XIVEIRM_IRMMASTERDATAS_PHONE="0"
-COM_XIVEIRM_IRMMASTERDATAS_FAX="0"
-COM_XIVEIRM_IRMMASTERDATAS_MOBILE="0"
-COM_XIVEIRM_IRMMASTERDATAS_EMAIL="0"
-COM_XIVEIRM_IRMMASTERDATAS_WEB="0"
-COM_XIVEIRM_IRMMASTERDATAS_REMARKS="0"
+COM_XIVEIRM_TITLE_IRMCUSTOMERS="IRM Masterdatas"
+COM_XIVEIRM_IRMCUSTOMERS_ID="ID"
+COM_XIVEIRM_IRMCUSTOMERS_STATE="State"
+COM_XIVEIRM_IRMCUSTOMERS_CREATED="Created"
+COM_XIVEIRM_IRMCUSTOMERS_CREATED_BY="Created by"
+COM_XIVEIRM_IRMCUSTOMERS_CHECKED_OUT="0"
+COM_XIVEIRM_IRMCUSTOMERS_CHECKED_OUT_TIME="0"
+COM_XIVEIRM_IRMCUSTOMERS_MODIFIED="0"
+COM_XIVEIRM_IRMCUSTOMERS_CLIENT_ID="Client ID"
+COM_XIVEIRM_IRMCUSTOMERS_CUSTOMER_ID="Customer ID"
+COM_XIVEIRM_IRMCUSTOMERS_TITLE="0"
+COM_XIVEIRM_IRMCUSTOMERS_LAST_NAME="Last Name"
+COM_XIVEIRM_IRMCUSTOMERS_FIRST_NAME="First Name"
+COM_XIVEIRM_IRMCUSTOMERS_GENDER="Gender"
+COM_XIVEIRM_IRMCUSTOMERS_DOB="Date of Birth"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_NAME="0"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_NAME_ADD="0"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_STREET="0"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_HOUSENO="0"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_ZIP="0"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_CITY="0"
+COM_XIVEIRM_IRMCUSTOMERS_ADDRESS_COUNTRY="0"
+COM_XIVEIRM_IRMCUSTOMERS_PHONE="0"
+COM_XIVEIRM_IRMCUSTOMERS_FAX="0"
+COM_XIVEIRM_IRMCUSTOMERS_MOBILE="0"
+COM_XIVEIRM_IRMCUSTOMERS_EMAIL="0"
+COM_XIVEIRM_IRMCUSTOMERS_WEB="0"
+COM_XIVEIRM_IRMCUSTOMERS_REMARKS="0"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_ID="Tab Id"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_FIELD_ID="0"
@@ -70,68 +70,68 @@ COM_XIVEIRM_SELECTLISTS_SL_VALUE="Selectlist value"
 COM_XIVEIRM_SELECTLISTS_SL_STRING="Selectlist string"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API="Single Api"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API_DESC="Show a specific Api"
-COM_XIVEIRM_TITLE_IRMMASTERDATA="IRM Masterdata"
-COM_XIVEIRM_LEGEND_IRMMASTERDATA="IRM Masterdata"
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ID="ID"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ID=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_STATE="State"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_STATE=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CREATED="0"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CREATED=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CREATED_BY="Created by"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CREATED_BY=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CHECKED_OUT="N/A"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CHECKED_OUT=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CHECKED_OUT_TIME="N/A"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CHECKED_OUT_TIME=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_MODIFIED="Modified"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_MODIFIED=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CLIENT_ID="Client ID"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CLIENT_ID=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_CUSTOMER_ID="Customer ID"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_CUSTOMER_ID=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_TITLE="Title"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_TITLE=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_LAST_NAME="Last Name"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_LAST_NAME=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_FIRST_NAME="First Name"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_FIRST_NAME=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_GENDER="Gender"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_GENDER=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_DOB="Date of Birth"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_DOB=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_NAME="Address Name"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_NAME=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_NAME_ADD="Address Name Add"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_NAME_ADD=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_STREET="Address Street"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_STREET=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_HOUSENO="House No"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_HOUSENO=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_ZIP="ZIP Code"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_ZIP=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_CITY="City"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_CITY=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_ADDRESS_COUNTRY="Country"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_ADDRESS_COUNTRY=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_PHONE="Phone"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_PHONE=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_FAX="Fax"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_FAX=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_MOBILE="Mobile"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_MOBILE=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_EMAIL="eMail"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_EMAIL=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_WEB="Web"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_WEB=""
-COM_XIVEIRM_FORM_LBL_IRMMASTERDATA_REMARKS="Remarks"
-COM_XIVEIRM_FORM_DESC_IRMMASTERDATA_REMARKS=""
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMMASTERDATAS="IRM Masterdatas"
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMMASTERDATAS_DESC="Show a list of IRM Masterdatas"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMMASTERDATA="Single Irmmasterdata"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMMASTERDATA_DESC="Show a specific Irmmasterdata"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA="IrmmasterdataForm"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA_DESC="Show a form to add or edit a Irmmasterdata"
+COM_XIVEIRM_TITLE_IRMCUSTOMER="IRM Masterdata"
+COM_XIVEIRM_LEGEND_IRMCUSTOMER="IRM Masterdata"
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ID="ID"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ID=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_STATE="State"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_STATE=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CREATED="0"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CREATED=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CREATED_BY="Created by"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CREATED_BY=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CHECKED_OUT="N/A"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CHECKED_OUT=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CHECKED_OUT_TIME="N/A"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CHECKED_OUT_TIME=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_MODIFIED="Modified"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_MODIFIED=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CLIENT_ID="Client ID"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CLIENT_ID=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_CUSTOMER_ID="Customer ID"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_CUSTOMER_ID=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_TITLE="Title"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_TITLE=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_LAST_NAME="Last Name"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_LAST_NAME=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_FIRST_NAME="First Name"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_FIRST_NAME=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_GENDER="Gender"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_GENDER=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_DOB="Date of Birth"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_DOB=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_NAME="Address Name"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_NAME=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_NAME_ADD="Address Name Add"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_NAME_ADD=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_STREET="Address Street"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_STREET=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_HOUSENO="House No"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_HOUSENO=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_ZIP="ZIP Code"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_ZIP=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_CITY="City"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_CITY=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ADDRESS_COUNTRY="Country"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ADDRESS_COUNTRY=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_PHONE="Phone"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_PHONE=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_FAX="Fax"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_FAX=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_MOBILE="Mobile"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_MOBILE=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_EMAIL="eMail"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_EMAIL=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_WEB="Web"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_WEB=""
+COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_REMARKS="Remarks"
+COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_REMARKS=""
+COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS="IRM Masterdatas"
+COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS_DESC="Show a list of IRM Masterdatas"
+COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER="Single IRMCUSTOMER"
+COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER_DESC="Show a specific IRMCUSTOMER"
+COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER="IRMCUSTOMERForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER_DESC="Show a form to add or edit a IRMCUSTOMER"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_LEGEND_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_ID="Tab Id"
