--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.sys.ini
@@ -7,13 +7,13 @@
 COM_XIVEIRM="XiveIRM"
 COM_XIVEIRM_XML_DESCRIPTION="Interoperable Relationship Management - the next Generation of CRM"
 COM_XIVEIRM_TEST_LABEL="Test label"
-COM_XIVEIRM_TITLE_IRMMASTERDATAS="IRM Masterdatas"
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMMASTERDATAS="IRM Masterdatas"
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMMASTERDATAS_DESC="Show a list of IRM Masterdatas"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMMASTERDATA="Single Irmmasterdata"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMMASTERDATA_DESC="Show a specific Irmmasterdata"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA="IrmmasterdataForm"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMMASTERDATA_DESC="Show a form to add or edit a Irmmasterdata"
+COM_XIVEIRM_TITLE_IRMCUSTOMERS="IRM Masterdatas"
+COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS="IRM Masterdatas"
+COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS_DESC="Show a list of IRM Masterdatas"
+COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER="Single IRMCUSTOMER"
+COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER_DESC="Show a specific IRMCUSTOMER"
+COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER="IRMCUSTOMERForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER_DESC="Show a form to add or edit a IRMCUSTOMER"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
 COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API="Single Api"
