checked and prepared for 3.3

--- a/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/administrator/language/en-GB.com_xiveirm.ini
@@ -30,7 +30,8 @@ COM_XIVEIRM_ITEM_ID_SELECT_LABEL_FORM="Select the Item ID to Edit (Set up as 0 i
 COM_XIVEIRM_FIELDSET_ITEM_ID_SELECT_LABEL="Required Settings"
 COM_XIVEIRM_FILTER_SELECT_LABEL=" - Select %s - "
 COM_XIVEIRM_TEST_LABEL="Test label"
-COM_XIVEIRM_TITLE_IRMCUSTOMERS="IRM Masterdatas"
+COM_XIVEIRM_TITLE_IRMCUSTOMERS="IRM Customers"
+
 COM_XIVEIRM_IRMCUSTOMERS_ID="ID"
 COM_XIVEIRM_IRMCUSTOMERS_STATE="State"
 COM_XIVEIRM_IRMCUSTOMERS_CREATED="Created"
@@ -59,19 +60,24 @@ COM_XIVEIRM_IRMCUSTOMERS_EMAIL="0"
 COM_XIVEIRM_IRMCUSTOMERS_WEB="0"
 COM_XIVEIRM_IRMCUSTOMERS_REMARKS="0"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATIONS="Additional Informations"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_ID="Tab Id"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_FIELD_ID="0"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_CUSTOMER_DB_ID="Customer DB-ID"
+COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_KEY="Tab Key"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_TAB_VALUE="Tab Value"
-COM_XIVEIRM_ADDITIONALINFORMATIONS_STATE="State"
 COM_XIVEIRM_ADDITIONALINFORMATIONS_ORDERING="0"
 COM_XIVEIRM_TITLE_SELECTLISTS="Select lists"
+COM_XIVEIRM_SELECTLISTS_CLIENT_ID="Client Id"
 COM_XIVEIRM_SELECTLISTS_SL_KEY="Selectlist Key"
 COM_XIVEIRM_SELECTLISTS_SL_VALUE="Selectlist value"
 COM_XIVEIRM_SELECTLISTS_SL_STRING="Selectlist string"
+COM_XIVEIRM_SELECTLISTS_ORDERING="0"
+COM_XIVEIRM_TITLE_LIST_VIEW_APIS="Apis"
+COM_XIVEIRM_TITLE_LIST_VIEW_APIS_DESC="Show a list of Apis"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API="Single Api"
 COM_XIVEIRM_TITLE_ITEM_VIEW_API_DESC="Show a specific Api"
-COM_XIVEIRM_TITLE_IRMCUSTOMER="IRM Masterdata"
-COM_XIVEIRM_LEGEND_IRMCUSTOMER="IRM Masterdata"
+COM_XIVEIRM_TITLE_FORM_VIEW_API="ApiForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_API_DESC="Show a form to add or edit a Api"
+COM_XIVEIRM_TITLE_IRMCUSTOMER="IRM Customer"
+COM_XIVEIRM_LEGEND_IRMCUSTOMER="IRM Customer"
 COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_ID="ID"
 COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_ID=""
 COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_STATE="State"
@@ -126,29 +132,31 @@ COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_WEB="Web"
 COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_WEB=""
 COM_XIVEIRM_FORM_LBL_IRMCUSTOMER_REMARKS="Remarks"
 COM_XIVEIRM_FORM_DESC_IRMCUSTOMER_REMARKS=""
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS="IRM Masterdatas"
-COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS_DESC="Show a list of IRM Masterdatas"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER="Single IRMCUSTOMER"
-COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER_DESC="Show a specific IRMCUSTOMER"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER="IRMCUSTOMERForm"
-COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER_DESC="Show a form to add or edit a IRMCUSTOMER"
+COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS="IRM Customers"
+COM_XIVEIRM_TITLE_LIST_VIEW_IRMCUSTOMERS_DESC="Show a list of IRM Customers"
+COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER="Single Irmcustomer"
+COM_XIVEIRM_TITLE_ITEM_VIEW_IRMCUSTOMER_DESC="Show a specific Irmcustomer"
+COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER="IrmcustomerForm"
+COM_XIVEIRM_TITLE_FORM_VIEW_IRMCUSTOMER_DESC="Show a form to add or edit a Irmcustomer"
 COM_XIVEIRM_TITLE_ADDITIONALINFORMATION="Additional Information"
 COM_XIVEIRM_LEGEND_ADDITIONALINFORMATION="Additional Information"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_ID="Tab Id"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM! For Example: We want to store datas need for invoicing - i.e. an additional invoice address or other invoice related datas. This tab_id is a combination between your plugin idname  (eg: \"invoicevalues\") and the customer db id (This is the id from the #__xiveirm_masterdata table). We identify if only one tab is related to the customer at the same time! The complete string looks like \"invoicevalues.4234142\""
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_FIELD_ID="Tab Field Id"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_FIELD_ID="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM! For Example: We want to store datas we need for invoicing - i.e. an additional invoice address or other invoice related datas. This field identifies the form field. eg: \"invoice_address\" Form fields are unique in your plugin NOT in database This field is currently not used by the API !!!!"
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_CUSTOMER_DB_ID="Customer DB-ID"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_CUSTOMER_DB_ID=""
+COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_KEY="Tab Key"
+COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_KEY="NOTE: We extend only the customer masterdata app with datas shown on a related tab in the IRM! For Example: We want to store datas need for invoicing - i.e. an additional invoice address or other invoice related datas. This tab_id is a combination between your plugin idname  (eg: \"invoicevalues\") and the customer db id (This is the id from the #__xiveirm_masterdata table). We identify if only one tab is related to the customer at the same time! The complete string looks like \"invoicevalues.4234142\""
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_TAB_VALUE="Tab Value"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_TAB_VALUE="This field holds the value this can be a single word, a json string or any other content for a DB text field. Please note that any content will be db->quoted"
-COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_STATE="State"
-COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_STATE=""
 COM_XIVEIRM_FORM_LBL_ADDITIONALINFORMATION_ORDERING="0"
 COM_XIVEIRM_FORM_DESC_ADDITIONALINFORMATION_ORDERING=""
 COM_XIVEIRM_TITLE_SELECTLIST="Select list"
 COM_XIVEIRM_LEGEND_SELECTLIST="Select list"
+COM_XIVEIRM_FORM_LBL_SELECTLIST_CLIENT_ID="Client Id"
+COM_XIVEIRM_FORM_DESC_SELECTLIST_CLIENT_ID=""
 COM_XIVEIRM_FORM_LBL_SELECTLIST_SL_KEY="Selectlist Key"
 COM_XIVEIRM_FORM_DESC_SELECTLIST_SL_KEY="Format: \"myapporplugin.listname\""
 COM_XIVEIRM_FORM_LBL_SELECTLIST_SL_VALUE="Selectlist value"
 COM_XIVEIRM_FORM_DESC_SELECTLIST_SL_VALUE=""
 COM_XIVEIRM_FORM_LBL_SELECTLIST_SL_STRING="Selectlist string"
 COM_XIVEIRM_FORM_DESC_SELECTLIST_SL_STRING="should be translatable by loadLanguage"
+COM_XIVEIRM_FORM_LBL_SELECTLIST_ORDERING="0"
+COM_XIVEIRM_FORM_DESC_SELECTLIST_ORDERING=""
