--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -49,9 +49,11 @@ COM_XIVEIRM_IRMCUSTOMER_FORM_RESET_TIP = "Reset form to the default values"
 COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_MODIFIED = "Last modified on:"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_INFO = "<h1><i class=\"icon-signout\"></i> Sie haben diesen Kontakt ausgecheckt!</h1><p>Andere Benutzer sehen, dass Sie diesen Kontakt gerade bearbeiten und erhalten einen entsprechenden Hinweis.</p><p>Bitte beachten Sie auch die folgenden Hinweise:</p><ul><li>Das \"CICA-System\" <i>(Check-In, Check-Out)</i> weist Sie auf eine laufende bearbeitung hin.</li><li>Eine gleichzeitige Bearbeitung ist m&ouml;glich, kann jedoch zu inkonsistenten Datens&auml;tzen f&uuml;hren</li><li>Verlassen Sie diese Kontakt bitte \"IMMER\" &uuml;ber die entsprechenden Schaltfl&auml;chen! (Speichern, Abbrechen, etc...)</li><li>Eine automatische Freigabe des Datensatzes erfolgt automatisch, wenn innerhalb von 10 Minuten keine Eingabe erfolgt!</li></ul>"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
+COM_XIVEIRM_IRMCUSTOMER_FORM_ACCESS_ID = "Access ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID_LABEL = "Customer ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID = "Enter the Customer ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_NAME_LABEL = "Name"
+COM_XIVEIRM_IRMCUSTOMER_FORM_COMPANY_NAME = "Company Name"
 COM_XIVEIRM_IRMCUSTOMER_FORM_NAME_TITLE = "Academic title"
 COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_NAME = "Last Name"
 COM_XIVEIRM_IRMCUSTOMER_FORM_FIRST_NAME = "First Name"
