--- a/source/package/plugins/plg_irmcustomertabs_medicaldetails/language/en-GB/en-GB.plg_irmcustomertabs_medicaldetails.sys.ini
+++ b/source/package/plugins/plg_irmcustomertabs_medicaldetails/language/en-GB/en-GB.plg_irmcustomertabs_medicaldetails.sys.ini
@@ -4,7 +4,5 @@
 ; @assetsLicense	devXive Proprietary Use License (http://www.devxive.com/license)
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
-PLG_IRMMASTERDATATABS_MEDICALDETAILS = "IRMMasterDataTab - Medical details"
-PLG_IRMMASTERDATATABS_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Masterdata App which extends the master data with medically relevant fields"
-
-PLG_IRMMASTERDATATABS_MEDICALDETAILS_TABNAME = "Medical Details"
+PLG_IRMCUSTOMERTABS_MEDICALDETAILS = "IRMCustomerTab - Medical details"
+PLG_IRMCUSTOMERTABS_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Masterdata App which extends the master data with medically relevant fields"
