--- a/source/package/plugins/plg_irmcustomertabs_medicaldetails/language/en-GB/en-GB.plg_irmcustomertabs_medicaldetails.ini
+++ b/source/package/plugins/plg_irmcustomertabs_medicaldetails/language/en-GB/en-GB.plg_irmcustomertabs_medicaldetails.ini
@@ -5,6 +5,6 @@
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
 PLG_IRMCUSTOMERTABS_MEDICALDETAILS = "IRMCustomerTab - Medical details"
-PLG_IRMCUSTOMERTABS_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Masterdata App which extends the master data with medically relevant fields"
+PLG_IRMCUSTOMERTABS_MEDICALDETAILS_XML_DESCRIPTION = "Tab Plugin for the IRM Customer App which extends the master data with medically relevant fields"
 
 PLG_IRMCUSTOMERTABS_MEDICALDETAILS_TABNAME = "Medical Details"
