--- a/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
+++ b/source/package/components/com_xiveirm/site/language/en-GB.com_xiveirm.ini
@@ -52,7 +52,7 @@ COM_XIVEIRM_IRMCUSTOMER_FORM_RESET_TIP = "Reset form to the default values"
 ; baseForm ----------------------------------------
 COM_XIVEIRM_IRMCUSTOMER_FORM_LAST_MODIFIED = "Last modified on:"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_TITLE = "Check-out: Successfully"
-COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_BODY = "Other user see can now see that you are currently editing %s. Don't forget to click _QQ_SAVE_QQ_ or _QQ_CANCEL_QQ_ to check in again - editing would otherwise not be possible by other users!"
+COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_INFO_BODY = "Other user see can now see that you are currently editing %s. Don't forget to click \"SAVE\" or \"CANCEL\" to check in again - editing would otherwise not be possible by other users!"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CHECKED_OUT_ALERT_ERROR = "<h1><i class=\"icon-signout\"></i> Achtung, dieser Kontakt wurde von einem anderen Benutzer ausgecheckt!</h1><p>Was ist passiert?<ul><li>Ein anderer Benutzer bearbeitet gerade diesen Kontakt!</li></ul></p><p>Was kann ich tun?<ul><li>Klicken Sie auf Abbrechen um m&ouml;gliche Dateninkonsistenzen zu vermeiden!</li><li>Kontaktieren Sie anschlie&szlig;end die entsprechende Person/Benutzer (siehe unten) oder versuchen es sp&auml;ter erneut.</li></ul>TIPP: Wenn ein Kontakt ausgescheckt ist, erkennen Sie das am roten Schloss-Symbol <i class=\"icon-lock red\"></i> in der Tabellen&uuml;bersicht!</p><p>SYSLOG: Der Benutzer <a href="%s">%s</a> hat diesen Kontakt am %s ausgecheckt. Eine voraussichtliche Bearbeitung ist in ca. %s Minuten m&ouml;glich.</p>"
 COM_XIVEIRM_IRMCUSTOMER_FORM_ACCESS_ID = "Access ID"
 COM_XIVEIRM_IRMCUSTOMER_FORM_CUSTOMER_ID_LABEL = "Customer ID"
