update language strings

--- a/source/package/plugins/plg_user_xiveirmclientprofile/language/en-GB/en-GB.plg_user_xiveirmclientprofile.ini
+++ b/source/package/plugins/plg_user_xiveirmclientprofile/language/en-GB/en-GB.plg_user_xiveirmclientprofile.ini
@@ -5,16 +5,18 @@
 ; @note		All ini files need to be saved as UTF-8 - No BOM
 
 PLG_USER_XIVEIRMCLIENTPROFILE = "User - XiveIRM Client Profile"
-PLG_USER_XIVEIRMCLIENTPROFILE_XML_DESCRIPTION = "User Profile Plug-in with special fields for Xive IRM. Please note that this plugin is only needed if your system is setted up as a service for others. The Client ID is an ID for grouping all users to a company or a to single user to determine all datas in the database."
+PLG_USER_XIVEIRMCLIENTPROFILE_XML_DESC = "User Profile Plug-in with special fields for Xive IRM. Please note that this plugin is only needed if your system is setted up as a service for others. The Client ID is an ID for grouping all users to a company or a to single user to determine all datas in the database."
+
+PLG_USER_XIVEIRMCLIENTPROFILE_SLIDER_LBL = "XiveIRM Client Profile"
 
 PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_NAME_PROFILE_REQUIRE_USER = "User profile fields for profile edit form"
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_NAME_REGISTER_REQUIRE_USER = "User profile fields for registration and administrator user forms"
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_NAME_REGISTER_REQUIRE_USER = "User profile fields for administrator user forms"
 
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_XIVEIRMCLIENTID_LABEL = "Client ID:"
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_XIVEIRMCLIENTID_DESC = "Choose an option for the field Client ID"
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_JOBTITLE_LABEL = "Job Title:"
-PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_JOBTITLE_DESC = "Choose an option for the field Job Title"
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_GROUPID_LBL = "Usergroup"
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_GROUPID_DESC = "Please choose the clients root usergroup (In select lists, the name of the company). Note: The usergroup id is stored in every main item as an identifier, such as contact items. This option is absolutely necessary to work with clients. Go to the plugin settings to set wether or not, this field is required."
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_CATID_LBL = "Category"
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_CATID_DESC = "Please choocse the clients root category (In select lists, the name of the company). Note: The category id is stored in every main item as an identifier, such as contact items. This option is absolutely necessary to work with tab apps. Go to the plugin settings to set wether or not, this field is required."
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_JOBTITLE_LBL = "Job Title:"
+PLG_USER_XIVEIRMCLIENTPROFILE_FIELD_JOBTITLE_DESC = "Type in the the users job title. This is used for example in the office app or as general improvement for conversations. Go to the plugin settings to set wether or not, this field is required."
 
-PLG_USER_XIVEIRMCLIENTPROFILE_FILL_FIELD_DESC_SITE = "If required, please fill this field."
-
-PLG_USER_XIVEIRMCLIENTPROFILE_SLIDER_LABEL = "User Profile Information"
+PLG_USER_XIVEIRMCLIENTPROFILE_FILL_FIELD_SITE_DESC = "If required, please fill this field."
